# xsoc_st_rm0434

./: CMakeLists.txt  DMA.cpp  DMA.hpp  config.hpp  rcc.hpp
clocks/: clk48.hpp  hclk.hpp  pclk.hpp  sysclk.hpp
clocks/sources/: hse.cpp  hsi16.cpp  hsi16.hpp  hsi48.cpp  lse.cpp  lsi.cpp  lsi.hpp  msi.cpp  msi.hpp  pll.cpp  pll.hpp
peripherals/ADC/: ADC.cpp  ADC.hpp
peripherals/GPIO/: GPIO.cpp  GPIO.hpp  base.hpp  gpio_ll.hpp
peripherals/I2C/: I2C.cpp  I2C.hpp
peripherals/SPI/: SPI.cpp  SPI.hpp
peripherals/Timer/: LPTIM.cpp  LPTIM.hpp  TIM.cpp  TIM.hpp
peripherals/USART/: DMA.cpp  DMA.hpp  LPUART.hpp  USART.cpp  USART.hpp
peripherals/crc/: crc.cpp  crc.hpp
peripherals/internal_flash/: internal_flash.cpp  internal_flash.hpp  option_bytes.cpp  option_bytes.hpp
peripherals/iwdg/: iwdg.cpp  iwdg.hpp
peripherals/rng/: rng.cpp  rng.hpp
peripherals/rtc/: rtc.cpp  rtc.hpp
rm0434/: DMA.cpp  DMA.hpp  config.hpp  rcc.hpp
rm0434/clocks/: clk48.hpp  hclk.hpp  pclk.hpp  sysclk.hpp
rm0434/clocks/sources/: hse.cpp  hse.hpp  hsi16.cpp  hsi16.hpp  hsi48.cpp  hsi48.hpp  lse.cpp  lse.hpp  lsi.cpp  msi.cpp  pll.cpp  pll.hpp
rm0434/peripherals/ADC/: ADC.cpp  ADC.hpp
rm0434/peripherals/GPIO/: GPIO.cpp  GPIO.hpp  base.hpp  gpio_ll.hpp
rm0434/peripherals/I2C/: I2C.cpp  I2C.hpp
rm0434/peripherals/SPI/: SPI.cpp  SPI.hpp
rm0434/peripherals/Timer/: LPTIM.cpp  LPTIM.hpp  TIM.cpp  TIM.hpp
rm0434/peripherals/USART/: DMA.cpp  DMA.hpp  LPUART.hpp  USART.cpp  USART.hpp
rm0434/peripherals/crc/: crc.cpp  crc.hpp
rm0434/peripherals/internal_flash/: internal_flash.cpp  internal_flash.hpp  option_bytes.cpp  option_bytes.hpp
rm0434/peripherals/iwdg/: iwdg.cpp
rm0434/peripherals/rng/: rng.cpp  rng.hpp
rm0434/peripherals/rtc/: rtc.cpp  rtc.hpp
rm0434/system/hsem/: hsem.cpp  hsem.hpp
rm0434/system/mcu/: mcu.hpp
rm0434/system/pwr/: pwr.cpp  pwr.hpp
rm0434/utils/: delay.cpp  delay.hpp  tick_counter.cpp  tick_counter.hpp  wait_until.hpp
sources/: hse.cpp  hse.hpp  hsi16.cpp  hsi16.hpp  hsi48.cpp  hsi48.hpp  lse.cpp  lse.hpp  lsi.cpp  lsi.hpp  msi.cpp  msi.hpp  pll.cpp  pll.hpp
system/hsem/: hsem.cpp  hsem.hpp
system/mcu/: mcu.cpp  mcu.hpp
system/pwr/: pwr.cpp  pwr.hpp
utils/: delay.cpp  delay.hpp  tick_counter.cpp  tick_counter.hpp  wait_until.hpp
